[gd_scene load_steps=8 format=2]

[ext_resource path="res://DialogueBox/BlackBox.png" type="Texture" id=1]
[ext_resource path="res://DialogueBox/Fonts/ArialNova.tres" type="DynamicFont" id=2]
[ext_resource path="res://DialogueBox/Ribbons/WhiteRibbon.png" type="Texture" id=3]
[ext_resource path="res://DialogueBox/Fonts/Abadi MT Std.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Portraits/Baron Neutral1.png" type="Texture" id=5]
[ext_resource path="res://Engine Resources/DialoguePlayer.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 4 )

[node name="DialoguePlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 320.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 640.0 ]
}

[node name="DialogueBox" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0037
anchor_right = 0.5
anchor_bottom = 1.0037
margin_left = -960.0
margin_top = -340.0
margin_right = 960.0
margin_bottom = -70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="Sprite" parent="DialogueBox"]
position = Vector2( 440, -253 )
scale = Vector2( 0.436667, 0.436667 )
texture = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="DialogueBox"]
anchor_left = 0.004
anchor_top = 0.385
anchor_right = 1.0
anchor_bottom = 1.244
margin_left = -7.68
margin_top = 0.0500183
margin_right = -0.00012207
margin_bottom = 1.12006
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="RichTextLabel" parent="DialogueBox/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 71.0
margin_right = -200.0
margin_bottom = -20.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "If you crash-land a transport at high speed in the middle of a storm and the cargo isn’t properly secured, then the supplies would be destroyed upon reaching the surface."
text = "If you crash-land a transport at high speed in the middle of a storm and the cargo isn’t properly secured, then the supplies would be destroyed upon reaching the surface."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ribbon" type="Sprite" parent="DialogueBox"]
position = Vector2( -360, 104 )
texture = ExtResource( 3 )

[node name="NamePlate" type="RichTextLabel" parent="DialogueBox/Ribbon"]
margin_left = 394.0
margin_top = -61.0
margin_right = 698.0
margin_bottom = 116.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[right]
Quartermaster[/right]"
text = "
Quartermaster"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="DialogueBox"]
[connection signal="tween_completed" from="DialogueBox/Tween" to="." method="_on_Tween_tween_completed"]
